--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open= []\n",
-    "    re\n",
+    "    for restaurant in restaurants:\n",
+    "        if \n",
     "    pass"
    ]
   },
