automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
     "def open_restaurants(restaurants):\n",
     "    open= []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant[]\n",
+    "        if restaurant[]=\"open\"\n",
+    "        open.push(restaurant)\n",
     "    pass"
    ]
   },
