--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "def open_restaurants(restaurants):\n",
     "    open= []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant[]=\"open\"\n",
+    "        if restaurant[is_closed]=\"false\"\n",
     "        open.push(restaurant)\n",
     "    pass"
    ]
