--- a/index.ipynb
+++ b/index.ipynb
@@ -285,15 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-f1e517550624>, line 4)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-14-e75d1dcb9e2f>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-f1e517550624>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant[is_closed]=\"false\"\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-e75d1dcb9e2f>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    open.push(restaurant)\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "def open_restaurants(restaurants):\n",
     "    open= []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant[is_closed]=\"false\"\n",
+    "        if restaurant[is_closed]==\"false\":\n",
     "        open.push(restaurant)\n",
     "    return open\n",
     "    pass"
